// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button isWaiting state matches snapshot 1`] = `
<button
  className="sc-bczRLJ fLTvYy"
  disabled={true}
>
  Submitting...
</button>
`;

exports[`Button matches snapshot 1`] = `
<button
  className="sc-bczRLJ fLTvYy"
>
  Click Me
</button>
`;
